[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-debug-openenv"
version = "0.1.0"
description = "OpenEnv environment for debugging real-world API integration failures"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
openenv-server = "server.app:app"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv-core>=0.2.0"
]