[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-debug-openenv"
version = "0.1.0"
description = "OpenEnv environment for debugging real-world API integration failures"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv-core>=0.2.0"
]


# ✅ Modern PEP-621 entrypoint (what *should* work)
[project.scripts]
openenv-server = "api_debug_openenv.server.app:main"


# ✅ Legacy setuptools fallback (what OpenEnv validator *actually* relies on)
[tool.setuptools]
packages = ["api_debug_openenv"]

[tool.setuptools.entry-points.console_scripts]
openenv-server = "api_debug_openenv.server.app:main"