[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-debug-openenv"
version = "0.1.0"
description = "OpenEnv environment for debugging real-world API integration failures"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "api_debug_openenv.server.app:main"

[tool.setuptools]
packages = ["api_debug_openenv"]

[tool.setuptools.entry-points.console_scripts]
server = "api_debug_openenv.server.app:main"